testing -a flag